--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
+    "joi": "^17.9.2",
+    "mysql2": "^3.4.0",
+    "sequelize": "^6.32.1"
   }
 }
